--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@ tr:nth-child(even) { background-color: #F6F2F2; }
 
 
 <tr> 
+  <td rowspan=1>2020-02-10 <br><br> (2:30pm~5:00pm, Room 4004)</td>
+  <td>
+    Paper reading: <i>Ethical and social risks of harm from LMs</i> for NMT [<a href="slides/20220210_yifan_deepmindethic.pdf"><font color="#0080FF">slides</font></a >]<br>
+  </td>
+  <td>  
+    <a href="https://yifan-h.github.io/">Yifan Hou</a > <br>
+  </td>
+</tr>
+	
+	
+<tr> 
   <td rowspan=1>2020-08-20 <br><br> (3:30pm~5:30pm, Room 4209)</td>
   <td>
     Rethinking the <i>Pretraining Models</i> for NMT [<a href="slides/20200820_jwxwang.pdf"><font color="#0080FF">slides</font></a >]<br>
