--- a/index.html
+++ b/index.html
@@ -68,10 +68,12 @@ tr:nth-child(even) { background-color: #F6F2F2; }
 <tr> 
   <td rowspan=1>2020-02-10 <br><br> (2:30pm~5:00pm, Room 4004)</td>
   <td>
-    Paper reading: <i>Ethical and social risks of harm from LMs</i> for NMT [<a href="slides/20220210_yifan_deepmindethic.pdf"><font color="#0080FF">slides</font></a >]<br>
+    <i>Ethical and social risks of harm from LMs</i> for NMT [<a href="slides/20220210_yifan_deepmindethic.pdf"><font color="#0080FF">slides</font></a >]<br>
+	<i>Research Highlights</i> of 2021 [<a href="slides/20220210_longyue.pdf"><font color="#0080FF">slides</font></a >]<br>
   </td>
   <td>  
     <a href="https://yifan-h.github.io/">Yifan Hou</a > <br>
+	<a href="http://longyuewang.com/">Longyue Wang</a > <br>
   </td>
 </tr>
 	
