ACM-MM and ECAI

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 <p></p>
 
 <ul>
+  <li type="circle">2024-07: 1 paper was accepted to ACM-MM2024, and 2 papers were accepted to ECAI2024.</li>        
   <li type="circle">2024-05: 1 paper was accepted to ICML2024, and 6 papers were accepted to ACL2024.</li>    
   <li type="circle">2024-01: 2 papers were accepted to ICLR2024.</li>    
   <li type="circle">2023-10: 3 papers were accepted to EMNLP2023.</li>    
