--- a/publications.html
+++ b/publications.html
@@ -91,7 +91,6 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
     <li>Tian Liang, Zhiwei He, Jen-tse Huang, Wenxuan Wang, Wenxiang Jiao, Rui Wang, Yujiu Yang, <u>Zhaopeng Tu</u>, Shuming Shi, and Xing Wang. <a href="https://arxiv.org/abs/2310.20499"><font color="#0080FF">Leveraging Word Guessing Games to Assess the Intelligence of Large Language Models</font></a>. <i>Preprint</i>.</li>
 
     <li>Chenyang Lyu, Minghao Wu, Longyue Wang, Xinting Huang, Bingshuai Liu, Zefeng Du, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2306.09093"><font color="#0080FF">Macaw-LLM: Multi-Modal Language Modeling with Image, Audio, Video, and Text Integration</font></a>. <i>Preprint</i>.</li>
-    <li>Zhanyu Wang, Longyue Wang, Zhen Zhao, Minghao Wu, Chenyang Lyu, Huayang Li, Deng Cai, Luping Zhou, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2311.16511"><font color="#0080FF">GPT4Video: A Unified Multimodal Large Language Model for lnstruction-Followed Understanding and Safety-Aware Generation</font></a>. <i>Preprint</i>.</li>
 
 
 
@@ -119,9 +118,13 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
     <li>Zhiwei He, Tian Liang, Wenxiang Jiao, Zhuosheng Zhang, Yujiu Yang, Rui Wang, <u>Zhaopeng Tu</u>*, Shuming Shi, and Xing Wang. <a href="https://arxiv.org/abs/2305.04118"><font color="#0080FF">Exploring Human-Like Translation Strategy with Large Language Models</font></a>. <i>TACL 2024</i>.</li>
     <li>Zhiwei He, Xing Wang, Wenxiang Jiao, Zhuosheng Zhang, Rui Wang, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2401.12873"><font color="#0080FF">Improving Machine Translation with Human Feedback: An Exploration of Quality Estimation as a Reward Model</font></a>. <i>NAACL 2024</i>.</li>
 
+    <li>Zhanyu Wang, Longyue Wang, Zhen Zhao, Minghao Wu, Chenyang Lyu, Huayang Li, Deng Cai, Luping Zhou, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2311.16511"><font color="#0080FF">GPT4Video: A Unified Multimodal Large Language Model for lnstruction-Followed Understanding and Safety-Aware Generation</font></a>. <i>ACM MM 2024</i>.</li>
+    
+    <li>Bingshuai Liu, Longyue Wang, Chenyang Lyu, Yong Zhang, Jinsong Su, Shuming Shi, and <u>Zhaopeng Tu</u>*. <a href="https://arxiv.org/abs/2307.02971"><font color="#0080FF">On the Cultural Gap in Text-to-Image Generation</font></a>. <i>ECAI 2024</i>.</li>
+    <li>Yan Liu, Longyue Wang, <u>Zhaopeng Tu</u>, and Deyi Xiong. <font color="#0080FF">On the Cultural Gap in Text-to-Image Generation</font>. <i>ECAI 2024</i>.</li>
+
     <li>Cunxiao Du, Hao Zhou, <u>Zhaopeng Tu</u>, and Jing Jiang. <font color="#0080FF">Revisiting the Markov Property for Machine Translation</font>. <i>EACL 2024 (Short, Findings)</i>.</li>
 
-    <li>Bingshuai Liu, Longyue Wang, Chenyang Lyu, Yong Zhang, Jinsong Su, Shuming Shi, and <u>Zhaopeng Tu</u>*. <a href="https://arxiv.org/abs/2307.02971"><font color="#0080FF">On the Cultural Gap in Text-to-Image Generation</font></a>. <i>ECAI 2024</i>.</li>
 
 
 <h3>2023</h3>
