--- a/publications.html
+++ b/publications.html
@@ -118,7 +118,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
     <li>Zhiwei He, Tian Liang, Wenxiang Jiao, Zhuosheng Zhang, Yujiu Yang, Rui Wang, <u>Zhaopeng Tu</u>*, Shuming Shi, and Xing Wang. <a href="https://arxiv.org/abs/2305.04118"><font color="#0080FF">Exploring Human-Like Translation Strategy with Large Language Models</font></a>. <i>TACL 2024</i>.</li>
     <li>Zhiwei He, Xing Wang, Wenxiang Jiao, Zhuosheng Zhang, Rui Wang, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2401.12873"><font color="#0080FF">Improving Machine Translation with Human Feedback: An Exploration of Quality Estimation as a Reward Model</font></a>. <i>NAACL 2024</i>.</li>
 
-    <li>Zhanyu Wang, Longyue Wang, Zhen Zhao, Minghao Wu, Chenyang Lyu, Huayang Li, Deng Cai, Luping Zhou, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2311.16511"><font color="#0080FF">GPT4Video: A Unified Multimodal Large Language Model for lnstruction-Followed Understanding and Safety-Aware Generation</font></a>. <i>ACM MM 2024</i>.</li>
+    <li>Zhanyu Wang, Longyue Wang, Zhen Zhao, Minghao Wu, Chenyang Lyu, Huayang Li, Deng Cai, Luping Zhou, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2311.16511"><font color="#0080FF">GPT4Video: A Unified Multimodal Large Language Model for lnstruction-Followed Understanding and Safety-Aware Generation</font></a>. <i>ACM MM 2024</i> (Oral, 3.97%).</li>
     
     <li>Bingshuai Liu, Longyue Wang, Chenyang Lyu, Yong Zhang, Jinsong Su, Shuming Shi, and <u>Zhaopeng Tu</u>*. <a href="https://arxiv.org/abs/2307.02971"><font color="#0080FF">On the Cultural Gap in Text-to-Image Generation</font></a>. <i>ECAI 2024</i>.</li>
     <li>Yan Liu, Longyue Wang, <u>Zhaopeng Tu</u>, and Deyi Xiong. <font color="#0080FF">On the Cultural Gap in Text-to-Image Generation</font>. <i>ECAI 2024</i>.</li>
@@ -165,7 +165,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 
 
 <h3>2021</h3>
-    <li>Cunxiao Du, <u>Zhaopeng Tu</u>*, and Jing Jiang. <a href="https://arxiv.org/abs/2106.05093"><font color="#0080FF">Order-Agnostic Cross Entropy for Non-Autoregressive Machine Translation</font></a>. <i>ICML 2021</i> (Long Presentation, 3%). </li>
+    <li>Cunxiao Du, <u>Zhaopeng Tu</u>*, and Jing Jiang. <a href="https://arxiv.org/abs/2106.05093"><font color="#0080FF">Order-Agnostic Cross Entropy for Non-Autoregressive Machine Translation</font></a>. <i>ICML 2021</i> (Oral, 3%). </li>
 
     <li>Liang Ding, Longyue Wang, Xuebo Liu, Derek F. Wong, Dacheng Tao, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2106.00903"><font color="#0080FF">Rejuvenating Low-Frequency Words: Making the Most of Parallel Data in Non-Autoregressive Translation</font></a>. <i>ACL 2021</i>. </li>
     <li>Wenxiang Jiao, Xing Wang, <u>Zhaopeng Tu</u>, Shuming Shi, Michael R. Lyu, and Irwin King. <a href="https://arxiv.org/abs/2106.00941"><font color="#0080FF">Self-Training Sampling with Monolingual Data Uncertainty for Neural Machine Translation</font></a>. <i>ACL 2021</i>. </li>
