--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 <p></p>
 
 <ul>
-  <li type="circle">2024-09: 1 paper was accepted to EMNLP2024.</li>        
+  <li type="circle">2024-09: 1 paper was accepted to EMNLP2024, and 1 paper was accepted to NeurIPS2024.</li>        
   <li type="circle">2024-07: 1 paper was accepted to ACM-MM2024, and 2 papers were accepted to ECAI2024.</li>        
   <li type="circle">2024-05: 1 paper was accepted to ICML2024, and 6 papers were accepted to ACL2024.</li>    
   <li type="circle">2024-01: 2 papers were accepted to ICLR2024.</li>    
@@ -100,6 +100,8 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
     <li type="circle">Tian Liang, Zhiwei He, Wenxiang Jiao, Xing Wang, Yan Wang, Rui Wang, Yujiu Yang, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2305.19118"><font color="#0080FF">Encouraging Divergent Thinking in Large Language Models through Multi-Agent Debate</font></a>. <i>EMNLP 2024</i>.</li>
 
     <li type="circle">Cunxiao Du, Jing Jiang, Xu Yuanchen, Jiawei Wu, Sicheng Yu, Yongqi Li, Shenggui Li, Kai Xu, Liqiang Nie, <u>Zhaopeng Tu</u>*, and Yang You. <a href="https://arxiv.org/abs/2402.02082"><font color="#0080FF">GliDe with a CaPE: A Low-Hassle Method to Accelerate Speculative Decoding</font></a>. <i>ICML 2024</i>.</li>
+    <li type="circle">Jen-tse Huang, Man Ho LAM, Eric John Li, Shujie Ren, Wenxuan Wang, Wenxiang Jiao, <u>Zhaopeng Tu</u>, and Michael Lyu. <a href="https://openreview.net/forum?id=pwRVGRWtGg"><font color="#0080FF">Apathetic or Empathetic? Evaluating LLMs' Emotional Alignments with Humans</font></a>. <i>NeurIPS 2024</i>.</li>
+
 
     <li type="circle">Wenxuan Wang, Wenxiang Jiao, Jingyuan Huang, Ruyi Dai, Jen-tse Huang, <u>Zhaopeng Tu</u>*, and Michael R Lyu. <a href="https://arxiv.org/abs/2310.12481"><font color="#0080FF">Not All Countries Celebrate Thanksgiving: On the Cultural Dominance in Large Language Models</font></a>. <i>ACL 2024</i>.</li>
     <li type="circle">Zhiwei He, Binglin Zhou, Hongkun Hao, Aiwei Liu, Xing Wang, <u>Zhaopeng Tu</u>, Zhuosheng Zhang, and Rui Wang. <font color="#0080FF">On the Cross-lingual Consistency of Text Watermark for Large Language Models</font>. <i>ACL 2024</i>.</li>
