--- a/publications.html
+++ b/publications.html
@@ -88,11 +88,6 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
     <li>Tian Liang, Zhiwei He, Jen-tse Huang, Wenxuan Wang, Wenxiang Jiao, Rui Wang, Yujiu Yang, <u>Zhaopeng Tu</u>, Shuming Shi, and Xing Wang. <a href="https://arxiv.org/abs/2310.20499"><font color="#0080FF">Leveraging Word Guessing Games to Assess the Intelligence of Large Language Models</font></a>. <i>Preprint</i>.</li>
 
     <li>Chenyang Lyu, Minghao Wu, Longyue Wang, Xinting Huang, Bingshuai Liu, Zefeng Du, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2306.09093"><font color="#0080FF">Macaw-LLM: Multi-Modal Language Modeling with Image, Audio, Video, and Text Integration</font></a>. <i>Preprint</i>.</li>
-
-
-
-
-
     
     <!-- li>Longyue Wang, Zefeng Du, DongHuai Liu, Deng Cai, Dian Yu, Haiyun Jiang, Yan Wang, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://openreview.net/forum?id=XIIynqbMXgR"><font color="#0080FF">GuoFeng: A Discourse-aware Evaluation Benchmark for Language Understanding, Translation and Generation</font></a>. <i>Preprint</i>.</li>
 
@@ -101,6 +96,8 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 
 <h3>2024</h3>
     <li>Cunxiao Du, Jing Jiang, Xu Yuanchen, Jiawei Wu, Sicheng Yu, Yongqi Li, Shenggui Li, Kai Xu, Liqiang Nie, <u>Zhaopeng Tu</u>*, and Yang You. <a href="https://arxiv.org/abs/2402.02082"><font color="#0080FF">GliDe with a CaPE: A Low-Hassle Method to Accelerate Speculative Decoding</font></a>. <i>ICML 2024</i>.</li>
+    
+    <li>Jen-tse Huang, Man Ho LAM, Eric John Li, Shujie Ren, Wenxuan Wang, Wenxiang Jiao, <u>Zhaopeng Tu</u>, and Michael Lyu. <a href="https://openreview.net/forum?id=pwRVGRWtGg"><font color="#0080FF">Apathetic or Empathetic? Evaluating LLMs' Emotional Alignments with Humans</font></a>. <i>NeurIPS 2024</i>.</li>
 
     <li>Wenxuan Wang, Wenxiang Jiao, Jingyuan Huang, Ruyi Dai, Jen-tse Huang, <u>Zhaopeng Tu</u>*, and Michael R Lyu. <a href="https://arxiv.org/abs/2310.12481"><font color="#0080FF">Not All Countries Celebrate Thanksgiving: On the Cultural Dominance in Large Language Models</font></a>. <i>ACL 2024</i>.</li>
     <li>Zhiwei He, Binglin Zhou, Hongkun Hao, Aiwei Liu, Xing Wang, <u>Zhaopeng Tu</u>, Zhuosheng Zhang, and Rui Wang. <font color="#0080FF">On the Cross-lingual Consistency of Text Watermark for Large Language Models</font>. <i>ACL 2024</i>.</li>
