--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 <p></p>
 
 <ul>
-  <li type="circle">2024-10: 1 paper was accepted to Transactions of ACL.</li>        
+  <li type="circle">2024-10: 1 paper was accepted to Transactions of ACL, and 1 paper was accepted to IEEE/ACM Transactions on Audio, Speech, and Language Processing.</li>        
   <li type="circle">2024-09: 1 paper was accepted to EMNLP2024, and 3 papers (including 2 D&B Papers) were accepted to NeurIPS2024.</li>        
   <li type="circle">2024-07: 1 paper was accepted to ACM-MM2024, and 2 papers were accepted to ECAI2024.</li>        
   <li type="circle">2024-05: 1 paper was accepted to ICML2024, and 6 papers were accepted to ACL2024.</li>    
