--- a/publications.html
+++ b/publications.html
@@ -111,7 +111,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
     <li>Zhiwei He, Tian Liang, Wenxiang Jiao, Zhuosheng Zhang, Yujiu Yang, Rui Wang, <u>Zhaopeng Tu</u>*, Shuming Shi, and Xing Wang. <a href="https://arxiv.org/abs/2305.04118"><font color="#0080FF">Exploring Human-Like Translation Strategy with Large Language Models</font></a>. <i>TACL 2024</i>.</li>
     <li>Zhiwei He, Xing Wang, Wenxiang Jiao, Zhuosheng Zhang, Rui Wang, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2401.12873"><font color="#0080FF">Improving Machine Translation with Human Feedback: An Exploration of Quality Estimation as a Reward Model</font></a>. <i>NAACL 2024</i>.</li>
 
-    <li>Zhanyu Wang, Longyue Wang, Zhen Zhao, Minghao Wu, Chenyang Lyu, Huayang Li, Deng Cai, Luping Zhou, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2311.16511"><font color="#0080FF">GPT4Video: A Unified Multimodal Large Language Model for lnstruction-Followed Understanding and Safety-Aware Generation</font></a>. <i>ACM MM 2024</i> (Oral, 3.97%).</li>
+    <li>Zhanyu Wang, Longyue Wang, Zhen Zhao, Minghao Wu, Chenyang Lyu, Huayang Li, Deng Cai, Luping Zhou, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2311.16511"><font color="#0080FF">GPT4Video: A Unified Multimodal Large Language Model for lnstruction-Followed Understanding and Safety-Aware Generation</font></a>. <i>ACM MM 2024</i>  [<font color="#C4260B"><b>Best Paper Normination</b></font>].</li>
     
     <li>Bingshuai Liu, Longyue Wang, Chenyang Lyu, Yong Zhang, Jinsong Su, Shuming Shi, and <u>Zhaopeng Tu</u>*. <a href="https://arxiv.org/abs/2307.02971"><font color="#0080FF">On the Cultural Gap in Text-to-Image Generation</font></a>. <i>ECAI 2024</i>.</li>
     <li>Yan Liu, Longyue Wang, <u>Zhaopeng Tu</u>, and Deyi Xiong. <font color="#0080FF">On the Cultural Gap in Text-to-Image Generation</font>. <i>ECAI 2024</i>.</li>
@@ -150,7 +150,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 
     <li>Mingzhou Xu, Longyue Wang, Derek F. Wong, Hongye Liu, Linfeng Song, Lidia S. Chao, Shuming Shi, and <u>Zhaopeng Tu</u>. <font color="#0080FF">GuoFeng: A Benchmark for Zero Pronoun Recovery and Translation</font>. <i>EMNLP 2022</i>. </li>
     <li>Shuo Wang, Peng Li, Zhixing Tan, <u>Zhaopeng Tu</u>, Maosong Sun, and Yang Liu. <font color="#0080FF">A Template-based Method for Constrained Neural Machine Translation</font>. <i>EMNLP 2022</i>. </li>
-    <li>Yifan Hou, Wenxiang Jiao, Meizhen Liu, Carl Allen, <u>Zhaopeng Tu</u>, and Mrinmaya Sachan. <font color="#0080FF">Adapters for Enhanced Modeling of Multilingual Knowledge and Text</font>. <i>EMNLP 2022 (Findings)</i>. [<b>Best Paper of MRL Workshop</b>]</li>
+    <li>Yifan Hou, Wenxiang Jiao, Meizhen Liu, Carl Allen, <u>Zhaopeng Tu</u>, and Mrinmaya Sachan. <font color="#0080FF">Adapters for Enhanced Modeling of Multilingual Knowledge and Text</font>. <i>EMNLP 2022 (Findings)</i>. [<font color="#C4260B"><b>Best Paper of MRL Workshop</b></font>]</li>
 
     <li>Cunxiao Du, <u>Zhaopeng Tu</u>*, Longyue Wang, and Jing Jiang. <a href=""><font color="#0080FF">ngram-OAXE: Phrase-Based Order-Agnostic Cross Entropy for Non-Autoregressive Machine Translation</font></a>. <i>COLING 2022</i>. </li>
     
