--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 <p></p>
 
 <ul>
+  <li type="circle">2024-10: Our paper titled "<i>GPT4Video: A Unified Multimodal Large Language Model for lnstruction-Followed Understanding and Safety-Aware Generation</i>" was <font color="#C4260B"><b>nominated for the Best Paper Award</b></font> at ACM MM 2024.</li>        
   <li type="circle">2024-10: 1 paper was accepted to Transactions of ACL, and 1 paper was accepted to IEEE/ACM Transactions on Audio, Speech, and Language Processing.</li>        
   <li type="circle">2024-09: 1 paper was accepted to EMNLP2024, and 3 papers (including 2 D&B Papers) were accepted to NeurIPS2024.</li>        
   <li type="circle">2024-07: 1 paper was accepted to ACM-MM2024, and 2 papers were accepted to ECAI2024.</li>        
@@ -69,7 +70,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
   <li type="circle">2024-01: 2 papers were accepted to ICLR2024.</li>    
   <li type="circle">2023-10: 3 papers were accepted to EMNLP2023.</li>    
   <li type="circle">2023-05: 2 papers were accepted to ACL2023.</li>    
-  <li type="circle">2022-11: Our paper titled "<i>Adapters for Enhanced Modeling of Multilingual Knowledge and Text</i>" was selected as the best paper of MRL Workshop in EMNLP2022.</li>    
+  <li type="circle">2022-11: Our paper titled "<i>Adapters for Enhanced Modeling of Multilingual Knowledge and Text</i>" was selected as the <font color="#C4260B"><b>Best Paper Award</b></font> at MRL Workshop in EMNLP2022.</li>    
   <li type="circle">2022-10: 3 papers were accepted to EMNLP2022.</li>    
   <li type="circle">2022-02: 3 papers were accepted to ACL2022.</li>    
 </ul>
