--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 
 <h3>Non-Autoregreesive NMT</h3>
 <ul>
-    <li type="circle">Cunxiao Du, <u>Zhaopeng Tu</u>*, and Jing Jiang. <a href="https://arxiv.org/abs/2106.05093"><font color="#0080FF">Order-Agnostic Cross Entropy for Non-Autoregressive Machine Translation</font></a>. <i>ICML 2021</i>. </li>
+    <li type="circle">Cunxiao Du, <u>Zhaopeng Tu</u>*, and Jing Jiang. <a href="https://arxiv.org/abs/2106.05093"><font color="#0080FF">Order-Agnostic Cross Entropy for Non-Autoregressive Machine Translation</font></a>. <i>ICML 2021</i> (Oral, 1.2%). </li>
     <li type="circle">Cunxiao Du, <u>Zhaopeng Tu</u>*, Longyue Wang, and Jing Jiang. <a href=""><font color="#0080FF">ngram-OAXE: Phrase-Based Order-Agnostic Cross Entropy for Non-Autoregressive Machine Translation</font></a>. <i>COLING 2022</i>. </li>
 
 
