--- a/publications.html
+++ b/publications.html
@@ -85,9 +85,6 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
     <li>Chenyang Lyu, Minghao Wu, Longyue Wang, Xinting Huang, Bingshuai Liu, Zefeng Du, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2306.09093"><font color="#0080FF">Macaw-LLM: Multi-Modal Language Modeling with Image, Audio, Video, and Text Integration</font></a>. <i>Preprint</i>.</li>
     
     <!-- li>Longyue Wang, Zefeng Du, DongHuai Liu, Deng Cai, Dian Yu, Haiyun Jiang, Yan Wang, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://openreview.net/forum?id=XIIynqbMXgR"><font color="#0080FF">GuoFeng: A Discourse-aware Evaluation Benchmark for Language Understanding, Translation and Generation</font></a>. <i>Preprint</i>.</li-->
-
-    <li>Wenxuan Wang, Wenxiang Jiao, Jen-tse Huang, Shuming Shi, <u>Zhaopeng Tu</u>*, and Michael Lyu. <a href="https://openreview.net/forum?id=fQGjNpkGVf"><font color="#0080FF">On the Shortcut Learning in Multilingual Neural Machine Translation</font></a>. <i>Preprint</i>.</li>
-
 <h3>2024</h3>
     <li>Cunxiao Du, Jing Jiang, Xu Yuanchen, Jiawei Wu, Sicheng Yu, Yongqi Li, Shenggui Li, Kai Xu, Liqiang Nie, <u>Zhaopeng Tu</u>*, and Yang You. <a href="https://arxiv.org/abs/2402.02082"><font color="#0080FF">GliDe with a CaPE: A Low-Hassle Method to Accelerate Speculative Decoding</font></a>. <i>ICML 2024</i>.</li>
     
@@ -107,7 +104,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 
     <li>Tian Liang, Zhiwei He, Wenxiang Jiao, Xing Wang, Yan Wang, Rui Wang, Yujiu Yang, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2305.19118"><font color="#0080FF">Encouraging Divergent Thinking in Large Language Models through Multi-Agent Debate</font></a>. <i>EMNLP 2024</i>.</li>
 
-    <li>Jianhui Pang, Fanghua Ye, Longyue Wang, Dian Yu, Derek F. Wong, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2401.08350"><font color="#0080FF">Salute the Classic: Revisiting Challenges of Machine Translation in the Age of Large Language Models</font></a>. <i>TACL 2024</i>.</li>
+    <li>Jianhui Pang, Fanghua Ye, Dian Yu, Derek F. Wong, Shuming Shi, <u>Zhaopeng Tu</u>, and Longyue Wang. <a href="https://arxiv.org/abs/2401.08350"><font color="#0080FF">Salute the Classic: Revisiting Challenges of Machine Translation in the Age of Large Language Models</font></a>. <i>TACL 2024</i>.</li>
     <li>Zhiwei He, Tian Liang, Wenxiang Jiao, Zhuosheng Zhang, Yujiu Yang, Rui Wang, <u>Zhaopeng Tu</u>*, Shuming Shi, and Xing Wang. <a href="https://arxiv.org/abs/2305.04118"><font color="#0080FF">Exploring Human-Like Translation Strategy with Large Language Models</font></a>. <i>TACL 2024</i>.</li>
     <li>Zhiwei He, Xing Wang, Wenxiang Jiao, Zhuosheng Zhang, Rui Wang, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2401.12873"><font color="#0080FF">Improving Machine Translation with Human Feedback: An Exploration of Quality Estimation as a Reward Model</font></a>. <i>NAACL 2024</i>.</li>
 
@@ -119,6 +116,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
     <li>Cunxiao Du, Hao Zhou, <u>Zhaopeng Tu</u>, and Jing Jiang. <font color="#0080FF">Revisiting the Markov Property for Machine Translation</font>. <i>EACL 2024 (Short, Findings)</i>.</li>
 
     <li>Wenxuan Wang, Wenxiang Jiao, Shuo Wang, <u>Zhaopeng Tu</u>*, and Michael Lyu. <a href="https://arxiv.org/abs/2205.10068"><font color="#0080FF">Understanding and Mitigating the Uncertainty in Zero-Shot Translation</font></a>. <i>Journal of TASLP, 2024</i>.</li>
+    <li>Wenxuan Wang, Wenxiang Jiao, Jen-tse Huang, Shuming Shi, <u>Zhaopeng Tu</u>*, and Michael Lyu. <a href="https://openreview.net/forum?id=fQGjNpkGVf"><font color="#0080FF">On the Shortcut Learning in Multilingual Neural Machine Translation</font></a>. <i>Journal of NeuroComputing, 2024</i>.</li>
 
 
 
