--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 <p></p>
 
 <ul>
+  <li type="circle">2025-01: 3 papers were accepted to ICLR2025.</li>        
   <li type="circle">2024-10: Our paper titled "<i>GPT4Video: A Unified Multimodal Large Language Model for lnstruction-Followed Understanding and Safety-Aware Generation</i>" was <font color="#C4260B"><b>nominated for the Best Paper Award</b></font> at ACM MM 2024.</li>        
   <li type="circle">2024-10: 1 paper was accepted to Transactions of ACL, and 1 paper was accepted to IEEE/ACM Transactions on Audio, Speech, and Language Processing.</li>        
   <li type="circle">2024-09: 1 paper was accepted to EMNLP2024, and 3 papers (including 2 D&B Papers) were accepted to NeurIPS2024.</li>        
@@ -98,6 +99,9 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 
 <h3>Large Language Models</h3>
 <ul>
+    <li type="circle">Xingyu Chen, Jiahao Xu, Tian Liang, Zhiwei He, Jianhui Pang, Dian Yu, Linfeng Song, Qiuzhi Liu, Mengfei Zhou, Zhuosheng Zhang, Rui Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2412.21187"><font color="#0080FF">Do NOT Think That Much for 2+3=? On the Overthinking of o1-Like LLMs</font></a>. <i>Preprint</i>.</li>
+    <li type="circle">Yue Wang, Qiuzhi Liu, Jiahao Xu, Tian Liang, Xingyu Chen, Zhiwei He, Linfeng Song, Dian Yu, Juntao Li, Zhuosheng Zhang, Rui Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2501.18585"><font color="#0080FF">Thoughts Are All Over the Place: On the Underthinking of o1-Like LLMs</font></a>. <i>Preprint</i>.</li>
+
     <li type="circle">Wenxiang Jiao, Wenxuan Wang, Jen-tse Huang, Xing Wang, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2301.08745"><font color="#0080FF">Is ChatGPT A Good Translator? Yes With GPT-4 As The Engine</font></a>. <i>Preprint</i>.</li>
 
     <li type="circle">Zhanyu Wang, Longyue Wang, Zhen Zhao, Minghao Wu, Chenyang Lyu, Huayang Li, Deng Cai, Luping Zhou, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2311.16511"><font color="#0080FF">GPT4Video: A Unified Multimodal Large Language Model for lnstruction-Followed Understanding and Safety-Aware Generation</font></a>. <i>ACM MM 2024</i>. [<font color="#C4260B"><b>Best Paper Normination</b></font>]</li>
