--- a/publications.html
+++ b/publications.html
@@ -80,13 +80,11 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
     <li>Yue Wang, Qiuzhi Liu, Jiahao Xu, Tian Liang, Xingyu Chen, Zhiwei He, Linfeng Song, Dian Yu, Juntao Li, Zhuosheng Zhang, Rui Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2501.18585"><font color="#0080FF">Thoughts Are All Over the Place: On the Underthinking of o1-Like LLMs</font></a>. <i>Preprint</i>.</li>
 
     <li>Wenxiang Jiao, Wenxuan Wang, Jen-tse Huang, Xing Wang, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2301.08745"><font color="#0080FF">Is ChatGPT A Good Translator? Yes With GPT-4 As The Engine</font></a>. <i>Preprint</i>.</li>
-    
-    <!-- li>Wenxuan Wang, Juluan Shi, <u>Zhaopeng Tu</u>, Youliang Yuan, Jen-tse Huang, Wenxiang Jiao, and Michael R. Lyu. <a href="https://arxiv.org/abs/2401.00761"><font color="#0080FF">The Earth is Flat? Unveiling Factual Errors in Large Language Models</font></a>. <i>Preprint</i>.</li>       
-    <li>Tian Liang, Zhiwei He, Jen-tse Huang, Wenxuan Wang, Wenxiang Jiao, Rui Wang, Yujiu Yang, <u>Zhaopeng Tu</u>, Shuming Shi, and Xing Wang. <a href="https://arxiv.org/abs/2310.20499"><font color="#0080FF">Leveraging Word Guessing Games to Assess the Intelligence of Large Language Models</font></a>. <i>Preprint</i>.</li-->
-    <li>Longyue Wang, Zefeng Du, DongHuai Liu, Deng Cai, Dian Yu, Haiyun Jiang, Yan Wang, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://openreview.net/forum?id=XIIynqbMXgR"><font color="#0080FF">GuoFeng: A Discourse-aware Evaluation Benchmark for Language Understanding, Translation and Generation</font></a>. <i>Preprint</i>.</li-->
-
     <li>Chenyang Lyu, Minghao Wu, Longyue Wang, Xinting Huang, Bingshuai Liu, Zefeng Du, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2306.09093"><font color="#0080FF">Macaw-LLM: Multi-Modal Language Modeling with Image, Audio, Video, and Text Integration</font></a>. <i>Preprint</i>.</li>
 
+    <!-- li>Wenxuan Wang, Juluan Shi, <u>Zhaopeng Tu</u>, Youliang Yuan, Jen-tse Huang, Wenxiang Jiao, and Michael R. Lyu. <a href="https://arxiv.org/abs/2401.00761"><font color="#0080FF">The Earth is Flat? Unveiling Factual Errors in Large Language Models</font></a>. <i>Preprint</i>.</li>       
+    <li>Tian Liang, Zhiwei He, Jen-tse Huang, Wenxuan Wang, Wenxiang Jiao, Rui Wang, Yujiu Yang, <u>Zhaopeng Tu</u>, Shuming Shi, and Xing Wang. <a href="https://arxiv.org/abs/2310.20499"><font color="#0080FF">Leveraging Word Guessing Games to Assess the Intelligence of Large Language Models</font></a>. <i>Preprint</i>.</li>
+    <li>Longyue Wang, Zefeng Du, DongHuai Liu, Deng Cai, Dian Yu, Haiyun Jiang, Yan Wang, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://openreview.net/forum?id=XIIynqbMXgR"><font color="#0080FF">GuoFeng: A Discourse-aware Evaluation Benchmark for Language Understanding, Translation and Generation</font></a>. <i>Preprint</i>.</li-->
 	
 <h3>2025</h3>
     <li>Zhiwei He, <u>Zhaopeng Tu</u>*, Xing Wang, Xingyu Chen, Zhijie Wang, Jiahao Xu, Tian Liang, Wenxiang Jiao, Zhuosheng Zhang, and Rui Wang. <a href="https://openreview.net/forum?id=GdXI5zCoAt"><font color="#0080FF">RaSA: Rank-Sharing Low-Rank Adaptation</font></a>. <i>ICLR 2025</i>.</li>
