--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
     
     <li type="circle">Longyue Wang, Chenyang Lyu, Tianbo Ji, Zhirui Zhang, Dian Yu, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/pdf/2304.02210.pdf"><font color="#0080FF">Document-Level Machine Translation with Large Language Models</font></a>. <i>EMNLP 2023</i>.</li>
     <li type="circle">Wenxiang Jiao, Jen-tse Huang, Wenxuan Wang, Xing Wang, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2304.02426"><font color="#0080FF">ParroT: Translating During Chat Using Large Language Models</font></a>. <i>EMNLP 2023 (Findings)</i>.</li>
+    <li type="circle">Yifan Hou, Wenxiang Jiao, Meizhen Liu, Carl Allen, <u>Zhaopeng Tu</u>, and Mrinmaya Sachan. <font color="#0080FF">Adapters for Enhanced Modeling of Multilingual Knowledge and Text</font>. <i>EMNLP 2022 (Findings)</i>. [<font color="#C4260B"><b>Best Paper of MRL Workshop</b></font>]</li>
+
 </ul>
 
 
