--- a/publications.html
+++ b/publications.html
@@ -33,9 +33,8 @@ table {
 
 <h2><b>Zhaopeng Tu</b></h2>
 <p align="left">
-<b>Principal Researcher</b>
-<br/>
-<a href="http://ai.tencent.com/ailab/">Tencent AI Lab</a><br />
+<b>Principal Researcher</b><br/>
+Hunyuan AI Digital Human, Tencent<br />
 tuzhaopeng@gmail.com
 </p -->
 
@@ -76,13 +75,11 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 
 <ol reversed>
 <h3>Preprint</h3>
-    <li>Xingyu Chen, Jiahao Xu, Tian Liang, Zhiwei He, Jianhui Pang, Dian Yu, Linfeng Song, Qiuzhi Liu, Mengfei Zhou, Zhuosheng Zhang, Rui Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2412.21187"><font color="#0080FF">Do NOT Think That Much for 2+3=? On the Overthinking of o1-Like LLMs</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1873924882012291463">X</a></li>
+    <li>Xingyu Chen, Jiahao Xu, Tian Liang, Zhiwei He, Jianhui Pang, Dian Yu, Linfeng Song, Qiuzhi Liu, Mengfei Zhou, Zhuosheng Zhang, Rui Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2412.21187"><font color="#0080FF">Do NOT Think That Much for 2+3=? On the Overthinking of o1-Like LLMs</font></a>. <i>ICML</i>. <a href="https://x.com/tuzhaopeng/status/1873924882012291463">X</a></li>
     <li>Yue Wang, Qiuzhi Liu, Jiahao Xu, Tian Liang, Xingyu Chen, Zhiwei He, Linfeng Song, Dian Yu, Juntao Li, Zhuosheng Zhang, Rui Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2501.18585"><font color="#0080FF">Thoughts Are All Over the Place: On the Underthinking of o1-Like LLMs</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1885179412163027406">X</a></li>
-    <li>Zicheng Lin, Tian Liang, Jiahao Xu, Qiuzhi Liu, Xing Wang, Ruilin Luo, Chufan Shi, Siheng Li, Yujiu Yang, and <u>Zhaopeng Tu</u>*. <a href="https://arxiv.org/abs/2411.19943"><font color="#0080FF">Critical Tokens Matter: Token-Level Contrastive Estimation Enhances LLM's Reasoning Capability</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1879065390992753149">X</a></li>
+    <li>Zicheng Lin, Tian Liang, Jiahao Xu, Qiuzhi Liu, Xing Wang, Ruilin Luo, Chufan Shi, Siheng Li, Yujiu Yang, and <u>Zhaopeng Tu</u>*. <a href="https://arxiv.org/abs/2411.19943"><font color="#0080FF">Critical Tokens Matter: Token-Level Contrastive Estimation Enhances LLM's Reasoning Capability</font></a>. <i>ICML</i>. <a href="https://x.com/tuzhaopeng/status/1879065390992753149">X</a></li>
     <li>Ante Wang, Linfeng Song, Ye Tian, Dian Yu, Haitao Mi, Xiangyu Duan, <u>Zhaopeng Tu</u>*, Jinsong Su, and Dong Yu. <a href="https://arxiv.org/abs/2502.11183"><font color="#0080FF">Don't Get Lost in the Trees: Streamlining LLM Reasoning by Overcoming Tree Search Exploration Pitfalls</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1891346931433255300">X</a></li>
     <li>Ke Ji, Jiahao Xu, Tian Liang, Qiuzhi Liu, Zhiwei He, Xingyu Chen, Xiaoyuan Liu, Zhijie Wang, Junying Chen, Benyou Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="http://dx.doi.org/10.13140/RG.2.2.33772.07043"><font color="#0080FF">The First Few Tokens Are All You Need: An Efficient and Effective Unsupervised Prefix Fine-Tuning Method for Reasoning Models</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1895420224683516413">X</a></li>	
-
-
 	
     <li>Youliang Yuan, Wenxiang Jiao, Wenxuan Wang, Jen-tse Huang, Jiahao Xu, Tian Liang, Pinjia He, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2407.09121"><font color="#0080FF">Refuse Whenever You Feel Unsafe: Improving Safety in LLMs via Decoupled Refusal Training</font></a>. <i>Preprint</i>. <a href="https://x.com/youliang_yuan/status/1812665889852121332">X</a></li>
 
