--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@ tuzhaopeng@gmail.com
     <h2>Zhaopeng Tu</h2>
 
     <p>Principal Researcher<br />
-    <a href="http://ai.tencent.com/ailab/">Tencent AI Lab</a><br />
+    Hunyuan AI Digital Human, Tencent<br />
     tuzhaopeng@gmail.com</p>
 </td>
 
@@ -60,8 +60,7 @@ tuzhaopeng@gmail.com
 
 
 <h2>Bio</h2>
-<p>Zhaopeng Tu is a principal researcher at Tencent AI Lab, whose research focuses on deep learning for natural language processing (NLP). 
-He is currently working on neural machine translation (NMT) and large language modeling (LLM). 
+<p>Zhaopeng Tu is a principal researcher at Tencent, whose research focuses on large language models.
 He has published over 100 papers in leading NLP/AI journals and conferences such as ICML, ACL, EMNLP, ICLR, and TACL. 
 He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member of ACL, EMNLP, NAACL, AAAI, and IJCAI.</p>
 
